fix textarea scrollbar issue for Edge

--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ p.organizational {
     outline-style: none;
     width: 100%;
     resize: none;
+    scrollbar-width: none;
 }
 
 .sprite {
